# ChatBuy

./: .env.example  .envrc  .gitignore  AGENTS.md  CLAUDE.md  README.md  SmaCross.html  USAGE.md  app.py  pyproject.toml  refactoring_plan.md
chatbuy/: __init__.py  app.py  basic_indicators.py  batch.py  bs_point.py  bs_point_v2.py  bs_pointv2.py  data_analyst.py  evaluate_trade_signals.py  llm_models.py  logger.py  stream_md.py  und_img.py  utils.py  visualize_indicators.py
chatbuy/agents/: basic_core.py  basic_functionality.py  basic_functionality_v2.py  bs_point.py  financial_analysis.py
chatbuy/agents/demo/: basic_functionality.py  basic_functionality_v2.py  bs_point.py  bs_point_v2.py
chatbuy/backtest/: __init__.py  engine.py  vectorbt_wrapper.py
chatbuy/base_model/: dspy_lm.py  hf_model.py  llm_models.py  pydantic_lm.py  smol_lm.py
chatbuy/core/: analysis.py  batch.py  evaluate_trade_signals.py  pipeline.py  visualize_indicators.py
chatbuy/data/: __init__.py  fetcher.py  processor.py
chatbuy/nlp/: __init__.py  entity_extractor.py  intent_classifier.py  strategy_parser.py
chatbuy/rl_src/: train_btc_sb3.py
chatbuy/rl_src/env/: env_base_trad.py  env_btc_ccxt.py  env_multiple_crypto.py
chatbuy/scripts/: basic_indicators.py  get_crypto_data.py
chatbuy/strategies/: __init__.py  base_strategy.py  strategy_factory.py
chatbuy/strategies/templates/: __init__.py  dynamic_strategy.py  moving_average.py
chatbuy/tmp/: average_movie_rating.py
chatbuy/tool/: data_indicators_fetcher.py  mcp_tool.py  technicals.py  web_brower.py
chatbuy/tool/demo/: data_fetcher.py  mcp_tool.py  technical_indicator.py  technicals.py  web_tool.py
chatbuy/tool/web_tool/: demo.py
chatbuy/tools/: basic_tool.py
chatbuy/trader/: MACDVolume.py  README.md  __init__.py  analysis.py  bollinger_rsi.py  btdemo.py  data_manager.py  demo.py  double_ma.py  example_rotation.py  portfolio.py  rotation_strategy.py  simple.py
chatbuy/ui/: __init__.py  cli.py  gradio_app.py
chatbuy/ui/components/: __init__.py  strategy_tab.py
chatbuy/ui/utils/: __init__.py
demo/: demo1.py  demo_dspy.py  optimized_react.json
output/: trade_advice_final_results.csv  trade_advice_final_results_refactored.csv  trade_advice_results.csv  trade_advice_unified_results.csv  trade_advice_unified_results_async_limit_10.csv  trade_advice_unified_results_async_limit_5.csv  trade_advice_unified_results_async_unlimited.csv  trade_advice_unified_results_one.csv  trade_advice_unified_results_sync.csv
scripts/: basic_indicators.py  chatbuy_demo.py  debug.py  dspy_lm.py  eth_dual_ma_vectorbt.py  get_crypto_data.py  llm_engines.py  llm_models.py  run_gradio_app.py  simple_demo.py  test_components.py  test_dynamic_strategy.py  visualize_indicators.py
