[project]
name = "chatbuy"
version = "0.1.0"
description = "use gpt to chat with trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.65",
    "huggingface-hub>=0.29.2",
    "logfire>=3.7.1",
    "openai>=1.65.4",
    "pydantic-ai>=0.0.35",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "ruff>=0.9.9",
    "smolagents[litellm]>=1.10.0",
    "talipp>=2.4.1",
]

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"
 
[tool.ruff.lint]
extend-select = [
  "Q",
  "RUF100",
  "C90",
  "UP",
  "I",
]
flake8-quotes = {inline-quotes = "double", multiline-quotes = "double"}
isort = {combine-as-imports = true}
mccabe = {max-complexity = 15}
ignore = [
  "D100", # ignore missing docstring in module
  "D102", # ignore missing docstring in public method
  "D104", # ignore missing docstring in public package
  "D105", # ignore missing docstring in magic methods
  "D107" # ignore missing docstring in __init__ methods
]
 
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.logfire]
ignore_no_config = true
