[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatbuy"
version = "0.1.1"
description = "use gpt to chat with trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "ccxt>=4.5.3",
    "pandas>=2.3.2",
    "rich",
    "ruff",
    "vectorbt>=0.28.1",
    "yfinance>=0.2.65",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]
authors = [
  {name = "adofe", email = "adofezhu@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/PKQ1688/ChatBuy"

[tool.hatch.build]
include = [
  "chatbuy/**",
  "README.md",
  "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["chatbuy"]

[tool.logfire]
ignore_no_config = true

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"

[tool.ruff.lint]
extend-select = [
  "Q",
  "RUF100",
  "C90",
  "UP",
  "I",
  "D"
]
flake8-quotes = {inline-quotes = "double", multiline-quotes = "double"}
isort = {combine-as-imports = true}
mccabe = {max-complexity = 15}
ignore = [
  "D100", # ignore missing docstring in module
  "D102", # ignore missing docstring in public method
  "D104", # ignore missing docstring in public package
  "D105", # ignore missing docstring in magic methods
  "D107", # ignore missing docstring in __init__ methods
  "C901" # ignore too many imports
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
typeCheckingMode = "basic"
reportExplicitAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportCallIssue = false
reportIndexIssue = false
reportReturnType = false
reportGeneralTypeIssues = false
